# projects

./: .gitignore
c/arrays/: DataTypes.c  Evn.c  a.out  josephus.c  josy
c/bitwise/: BitWiseEx.c  BitWiseEx.h  TestBitWise.c
c/expressions/: Flip.c  HexHello.c  Power10.c  Swap.c
c/files/: Logger.c
c/functions/: EchoIf.c  EchoLut.c  EchoSwitch.c
c/pointers/: Ex_1.c  Ex_1.h  Ex_2.c  Ex_3.c  Ex_4.c  Ex_5.c  Ex_6.c  ex_main.c
c/structs/: add_types.c  add_types.h  macro_max.c  test_structs.c  type_sizeof.c  var_sizeof.c
c/word/: atoi.c  atoi.h  little_or_big_endian.c  mem.c  mem.h  testAtoy.c  testmem.c  three_char_arrays.c
colors_game/: README.md  color_game.cpp  color_game.hpp  color_game_test.cpp  makefile  play
cpp_fs/: makefile
cpp_fs/include/: bitarray.hpp
cpp_fs/intro/: a.out  casting.cpp  class25  class25.cpp  consts.c  consts.cpp  core  cpp23  cpp23.cpp  cpp24  cpp24.cpp  cpp25  cpp25.cpp  cpp26.cpp  cpp27  cpp27.cpp  cpp28.cpp  cpp29.cpp  cpp30  cpp30.cpp  cpp31  cpp31.cpp  cpp33.cpp  cpp34  cpp34.cpp  cpp35  cpp35.cpp  cpp36.cpp  cpp38.cpp  dynso_test  exe.cpp  exe1.cpp  exe11.cpp  foos.c  foos_test.cpp  inline.cpp  intro.c  intro.cpp  name_spaces.cpp  reference.cpp  (+5 more)
data_structures/: makefile
data_structures/include/: ca_test_util.h  circular_buffer.h  dllist.h  fsm.h  hash_table.h  heap.h  heap_pq.h  pqueue.h  sllist.h
design_patterns/: makefile
design_patterns/include/: ca_test_util.hpp  command.hpp  demultiplexer.hpp  factory.hpp  p_queue_adapter.hpp  reactor.hpp  scheduler.hpp  singleton.hpp  storage.hpp  udp_socket.hpp  vdr_protocol.hpp
design_patterns/test/: dispatcher_test.cpp  factory_test.cpp  logger_test.cpp  reactor_test.cpp  scheduler_test.cpp  scope_lock_test.cpp  thread_pool_test.cpp  timer_test.cpp  udp_socket_test.cpp
ds/include/: avl.h  bitarray.h  bst.h  dhcp.h  heap_scheduler.h  recursion.h  scheduler.h  sort.h  trie.h  uid.h
ds/test/: avl_test.out  bst_test.out  circular_buffer_test.out  dllist_test.out  heap_pq_test.out  knights_tour_test.out  pqueue_test.out  queue_test.out  scheduler_test.out  sort_test.out  task_test.out  trie_test.out  uid_test.out  vector_test.out
for_tests/: Test.cpp  Test.hpp  test.cpp
interview_questions/: consecutive_array.cpp  find_duplicates.cpp  matrix_product.cpp  merge_arrays.cpp
jump_in/: README.md  jump_in.cpp  jump_in.hpp  jump_in_test.cpp  levels_file  makefile  play
projects/: CMakeLists.txt
projects/include/: ca_test_util.hpp  command.hpp  communicator.hpp  dispatcher.hpp  factory.hpp  heap_storage.hpp  ilrd_details.hpp  logger.hpp  master.hpp  minion.hpp  nbd_communicator.hpp  proj_utils.hpp  scope_lock.hpp  singleton.hpp  storage.hpp  thread_pool.hpp  timer.hpp  utils.hpp  vdr_protocol.hpp  waitable_queue.hpp
projects/src/command/: command.cpp  command.hpp
projects/src/communicator/: CMakeLists.txt
projects/src/dispatcher/: dispatcher.hpp
projects/src/factory/: CMakeLists.txt  factory.hpp
projects/src/logger/: CMakeLists.txt  logger.cpp  logger.hpp  logger_test.cpp
projects/src/master/: master.cpp  master.hpp  master_test.cpp
projects/src/minion/: CMakeLists.txt  makefile  minion.cpp  minion.hpp  minion_test.cpp
projects/src/minion/blocks/: block0  block1  block2
projects/src/nbd/: nbd_communicator.cpp  nbd_communicator.hpp
projects/src/protocol/: README.md  vdr_protocol.cpp  vdr_protocol.hpp  vdr_protocol_overview.md
projects/src/reactor/: CMakeLists.txt  a.out  client  clients.cpp  demultiplexer.cpp  reactor.cpp  reactor.hpp
projects/src/scheduler/: CMakeLists.txt  scheduler.cpp
projects/src/scope_lock/: CMakeLists.txt  scope_lock.hpp
projects/src/serializer/: serializer.hpp  serializer_test.cpp
projects/src/singleton/: CMakeLists.txt  singleton.hpp  singleton_test.cpp
projects/src/storage/: CMakeLists.txt  heap_storage.hpp  master_storage.hpp
projects/src/thread_pool/: p_queue_adapter.hpp
projects/src/timer/: CMakeLists.txt  timer.cpp  timer.hpp  timer_test.cpp
projects/src/udp_socket/: CMakeLists.txt  udp_socket.hpp  udp_socket_test.cpp
projects/src/waitable_queue/: CMakeLists.txt  waitable_queue.hpp  waitable_queue_test.cpp
projects/test/: minion_test.cpp
quizzes/: CMakeLists.txt  HasSumTen.c  a.out  bits_bytes.cpp  booking.cpp  bst2dll.cpp  checks.cpp  cppExam.cpp  cut_rod.cpp  division.cpp  e_commerce.cpp  elbitEx.cpp  expressions.cpp  find_intersection.cpp  get_factors.cpp  greedy.cpp  hack.c  is_permutation.cpp  is_rotation.cpp  is_sum_found.c  longest_string.cpp  max_sub_array.c  max_three.c  median_of_sorted_arrays.cpp  min_unsort.cpp  multyplication.cpp  permutations.cpp  pixels.cpp  rain_cubes.c  reverse_stack.cpp  reverse_words.cpp  set_bits.cpp  snail_matrix.cpp  sorting.cpp  stack_of_queues.cpp  three_sum.cpp  triangle_number.cpp  two_power.cpp
quizzes/candy/: CMakeLists.txt  candy.cpp
sudoku/: README.md  sudoku.cpp  sudoku.hpp  sudoku_test.cpp
sudoku/bitarray/: bitarray.hpp
system_programming/Multithreaded_counting_sort/: a.out  multithread_count_sort.c
system_programming/fsa/: ca_test_util.h  fsa.c  fsa.h  fsa_test.c  makefile
system_programming/ipc/: ipc.cbp  mapped_memory.cpp  mmap-write  pipes.cpp
system_programming/ipc_pingpong/: a.out  fifo1  fifos.hpp  fifos1.cpp  fifos2  fifos2.cpp  mqueue_read.cpp  mqueue_write.cpp  pingpipe.cpp  shm_read.cpp  shm_write.cpp  socket.cpp  write
system_programming/ping_pong/: a.out  ping  ping_pong1.c  ping_pong2_1.c  ping_pong2_2.c  ping_pong3_1.c  ping_pong3_2.c  pingpong  pong
system_programming/ping_pong_server/: CMakeLists.txt  TCP_client_logger  UDP_client_logger  a.out  broadcast_client.cpp  brod  serv  server.cpp  server_logger  tcp  tcp_client.cpp  udp  udp_client.cpp  utils.cpp  utils.hpp
system_programming/producers_consumers/: makefile  pc1.c  pc2_1.c  pc2_2.c  pc3_1.c  pc3_2.c  pc4_1.c  (+2 more)
system_programming/tcp_udp/: CMakeLists.txt  a.out  broadcast_udp.cpp  brodi  client  ping  ping_udp.cpp  pong  pong_udp.cpp  server  tcp_client.cpp  tcp_server.cpp  tcp_udp_utils.cpp  tcp_udp_utils.hpp  tcps
watchdog/: makefile  wd_test.c  wd_utils.h
(+198 files in other folders)
