cmake_minimum_required(VERSION 3.13)
project(quizzes)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)
include_directories(../cpp_fs/include)

add_executable(min_unsort min_unsort.cpp)
add_executable(is_permutation is_permutation.cpp)
add_executable(get_factors get_factors.cpp)
add_executable(is_rotation is_rotation.cpp)
add_executable(booking booking.cpp)
add_executable(e_commerce e_commerce.cpp)
add_executable(reverse_stack reverse_stack.cpp)
add_executable(longest_string longest_string.cpp)
add_executable(sorting sorting.cpp)
add_executable(set_bits set_bits.cpp)
add_executable(stack_of_queues stack_of_queues.cpp)
add_executable(permutations permutations.cpp)
add_executable(checks checks.cpp)
add_executable(smallest_num elbitEx.cpp)
add_executable(bits_bytes bits_bytes.cpp)
add_executable(reverse_words reverse_words.cpp)
add_executable(greedy greedy.cpp)
add_executable(median_of_sorted_arrays median_of_sorted_arrays.cpp)

add_executable(expressions expressions.cpp)
add_executable(bst2dll bst2dll.cpp)
add_executable(snail_matrix snail_matrix.cpp)
add_executable(cppExam cppExam.cpp)
add_executable(triangle_number triangle_number.cpp)


add_executable(sudoku sudoku.cpp sudoku_test.cpp ../cpp_fs/src/bitarray/bitarray.cpp)
